syntax = "proto3";

package bytebase.store;

option go_package = "generated-go/store";

message UserGroupMember {
  // Member is the principal who belong to this user group.
  //
  // Format: users/{userUID}.
  string member = 1;

  enum Role {
    ROLE_UNSPECIFIED = 0;
    OWNER = 1;
    MEMBER = 2;
  }

  Role role = 2;
}

message UserGroupPayload {
  repeated UserGroupMember members = 1;
}
